[project]
name = "last-straw-for-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "open3d>=0.17.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "cloud-volume>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
